--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
             <div class="project">
                 <div class="project-header">
-                    <h2>comfydock</h2>
+                    <h2>ComfyDock</h2>
                     <span class="badge legacy">Legacy v0.x</span>
                 </div>
                 <p>Legacy Docker-based ComfyUI environment manager. Now deprecated in favor of ComfyGit's modern UV-based approach.</p>
